--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,3 +39,7 @@ ai:
     model: gpt-4o-mini
     url: https://api.openai.com/v1/chat/completions
 
+services:
+  interview-service:
+    base-url: http://localhost:8083
+
